<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/repeat_pattern"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="300dip"
            android:layout_height="225dip"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/image_border" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_rating" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/foodRatingBarBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="3.0"
            android:isIndicator="true"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_number" >
        </TextView>

        <TextView
            android:id="@+id/detail_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_name" >
        </TextView>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->
        <LinearLayout
            android:id="@+id/layout_collection"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lbl_detail_own"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/lbl_detail_own">
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <CheckBox android:id="@+id/chbx_detail_own"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chbx_detail_own_text" />

                <EditText android:id="@+id/txt_detail_own_quantity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </LinearLayout>
            <!-- /////////////////////////////////////////// -->

            <TextView
                android:id="@+id/lbl_detail_wish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/lbl_detail_wish" >
            </TextView>

            <CheckBox android:id="@+id/chbx_detail_wish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chbx_detail_wish_text" />
        </LinearLayout>


        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_theme" >
        </TextView>

        <TextView
            android:id="@+id/detail_theme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_subtheme" >
        </TextView>

        <TextView
            android:id="@+id/detail_subtheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_year" >
        </TextView>

        <TextView
            android:id="@+id/detail_year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_pieces" >
        </TextView>

        <TextView
            android:id="@+id/detail_pieces"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_minifigs" >
        </TextView>

        <TextView
            android:id="@+id/detail_minifigs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_packagingtype" >
        </TextView>

        <TextView
            android:id="@+id/detail_packagingtype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_availability" >
        </TextView>

        <TextView
            android:id="@+id/detail_availability"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_reviewcount" >
        </TextView>

        <TextView
            android:id="@+id/detail_reviewcount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_price_eu" >
        </TextView>

        <TextView
            android:id="@+id/detail_price_eu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_price_uk" >
        </TextView>

        <TextView
            android:id="@+id/detail_price_uk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_price_ca" >
        </TextView>

        <TextView
            android:id="@+id/detail_price_ca"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/detail_price_us" >
        </TextView>

        <TextView
            android:id="@+id/detail_price_us"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textStyle="bold" />

        <!-- /////////////////////////////////////////// -->



    </LinearLayout>

</ScrollView>